[package]
name = "roguelike"
version = "0.1.0"
authors = ["David Morcillo <david.morcillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = { version = "0.15", features = ["serialization"] }
rand = "0.3.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"